# rhiza

./: .bandit  .bandit-baseline.json  .codefactor.yml  .editorconfig  .env.marimo.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .rhiza.env  .semgrep.yml  .trivyignore.devcontainer  .zenodo.json  ANSWER_EXTERNAL_TEMPLATES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXPLORATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INDEX_TEMPLATE_SYSTEM_DOCS.md  INDEX_TEMPLATE_SYSTEM_DOCS_OLD.md  INTEGRATION.md  LICENSE  MAKEFILE_GUIDE.md  Makefile  Makefile.install  Makefile.release  PR.md  PRESENTATION.html  PRESENTATION.md  README.md  README.md.backup  README.md.simplified  REPOSITORY_ANALYSIS.md  REPOSITORY_SEPARATION.md  SECURITY.md  TEMPLATE_BUNDLES_DESIGN.md  TEMPLATE_BUNDLES_VISUALIZATION.md  TEMPLATE_SYSTEM_SUMMARY.md  WHY_NOT_IN_RHIZA_CLI.md  (+10 more)
.claude/: analysis.md  analysis2.md  plan.md  quality.md
.claude/commands/: quality.md  rhiza.md  rhiza_book.md  rhiza_quality.md  rhiza_release.md
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: Dockerfile  README.md  bootstrap.sh  devcontainer.json  startup.sh
.github/: CODEOWNERS  Makefile.gh  README.md  WORKFLOWS.md  context.json  dependabot.yml  template.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: adr-create.md  analyzer.md  coverage-agent.md
.github/aw/: actions-lock.json
.github/hooks/: session-end.sh  session-start.sh
.github/rulesets/: main-branch-protection.json
.github/scripts/: bump.sh  changelog.sh  validate_template_bundles.py
.github/workflows/: adr-create.md  agentics-maintenance.yml  book.yml  ci-doctor.lock.yml  ci-doctor.md  ci.yml  copilot-setup-steps.yml  coverage-agent.yml  daily-repo-status.lock.yml  daily-repo-status.md  devcontainer.yml  issue-triage.lock.yml  issue-triage.md  marimo.yml  pre-commit.yml  release.yml  rhiza.yml  rhiza_benchmark.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codefactor.yml  rhiza_codeql.yml  rhiza_coverage-agent.yml  rhiza_coverage_badge.yml  rhiza_deps-check.yml  rhiza_deptry.yml  rhiza_devcontainer.yml  rhiza_docker.yml  rhiza_docs.yml  rhiza_fuzzing.yml  rhiza_gh-aw-validate.yml  rhiza_link_check.yml  rhiza_marimo.yml  rhiza_mutation.yml  rhiza_mypy.yml  rhiza_network.yml  rhiza_paper.yml  rhiza_pre-commit.yml  rhiza_quality.yml  (+12 more)
.gitlab/: COMPARISON.md  README.md  SUMMARY.md  TESTING.md  scripts  utils  validate.sh
.gitlab/template/: marimo_job_template.yml.jinja
.gitlab/templates/: marimo_job_template.yml
.gitlab/workflows/: rhiza_book.yml  rhiza_ci.yml  rhiza_deptry.yml  rhiza_link_check.yml  rhiza_marimo.yml  rhiza_paper.yml  rhiza_pre-commit.yml  rhiza_quality.yml  rhiza_release.yml  rhiza_semgrep.yml  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml
.rhiza/: .cfg.toml  .env  .rhiza-version  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  INDEX.md  Makefile.rhiza  README.md  ROADMAP.md  bundles.yml  rhiza.mk  semgrep.yml  shell-init.sh  template-bundles.schema.json  template-bundles.yml
.rhiza/agentic/: Makefile.agentic
.rhiza/completions/: README.md  rhiza-completion.bash  rhiza-completion.zsh
.rhiza/docs/: BADGES.md  CONFIG.md  LFS.md  PRIVATE_PACKAGES.md  RELEASING.md  TEMPLATE_YML_EXAMPLE.md  WORKFLOWS.md
.rhiza/make.d/: 01-test.mk  02-book.mk  03-marimo.mk  06-agentic.mk  08-docs.mk  08-src.mk  09-lfs.mk  09-mkdocs.mk  README.md  agentic.mk  book.mk  bootstrap.mk  bundles.mk  completions.mk  custom-env.mk  custom-task.mk  docker.mk  doctor.mk  gh-aw.mk  github.mk  lfs.mk  marimo.mk  paper.mk  presentation.mk  quality.mk  releasing.mk  src.mk  test.mk
.rhiza/requirements/: README.md  docs.txt  marimo.txt  tests.txt  tools.txt
.rhiza/scripts/: README.md  check_workflow_names.py  install-dev-deps.sh  marimushka.sh  release.py  release.sh  validate_template_bundles.py
.rhiza/templates/: template.yml
.rhiza/tests/: MIGRATION_PLAN.md  README.md  conftest.py  test_docstrings.py  test_git_repo_fixture.py  test_pyproject.py  test_readme_validation.py  test_utils.py
.rhiza/toml/: rhiza.toml
.rhiza/utils/: analyze_benchmarks.py  explain_bundles.py  generate_coverage_badge.py  gh_aw_lock_freshness.py  pip_audit_policy.py  suppression_audit.py  suppression_parse.py  sync_pyproject.py  version_matrix.py
.venv-test/: pyvenv.cfg
book/: Makefile.book  Makefile.marimo  README.md  book.mk
book/marimo/: README.md  add.py  df.py  marimo.mk  rhiza.py  showcase.py
book/pdoc-templates/: module.html.jinja2
bundles/core/: .bandit  .pre-commit-config.yaml  pyproject.toml  ruff.toml
bundles/gitlab/: .gitlab-ci.yml
bundles/legal/: SECURITY.md
bundles/tests/: pytest.ini
docker/: Dockerfile
docs/: ADVANCED.md  ARCHITECTURE.md  BENCHMARK.md  BOOK.md  CHANGELOG_GUIDE.md  CREATING_TEMPLATE_REPOSITORY.md  CUSTOMIZATION.md  DEMO.md  DEPENDENCIES.md  DOCUMENTATION_PLAN.md  GH_AW_INTEGRATION.md  GLOSSARY.md  IMPLEMENTATION_GUIDE_RHIZA_CLI.md  LFS.md  MIGRATION.md  MIGRATION_TEMPLATE_BUNDLES.md  PRESENTATION.md  QUICK_REFERENCE.md  QUICK_REF_EXTERNAL_TEMPLATES.md  README_SIMPLIFICATION.md  SECURITY.md  SECURITY_TESTING.md  SHELL_SCRIPTS.md  TEMPLATE_BUNDLE_DISCOVERY.md  TESTS.md  WORKFLOWS.md  analysis.md  architecture.md  ci-cd.md  faq.md  glossary.md  index.md  migration.md  mkdocs-base.yml  mkdocs.yml  private-packages.md  stats.html  token-setup.md  troubleshooting.md
docs/adr/: 0001-use-architecture-decision-records.md  0010-layered-bundle-profile-model.md  README.md
docs/development/: DEVCONTAINER.md  DOCKER.md  GH_AW.md  MARIMO.md  PRESENTATION.md  TESTS.md  VSCODE_EXTENSIONS.md
docs/getting-started/: first-sync.md  installation.md  quickstart.md
fuzz/: fuzz_suppression_audit.py
make.d/: 01-custom-env.mk  10-custom-task.mk  README.md
marimo/: Makefile.marimo
paper/: rhiza.tex
presentation/: Makefile.presentation  README.md
security/: security.mk
src/: __init__.py  hello.py  src.mk
tests/: Makefile.tests  README.md  __init__.py  conftest.py  test_git_repo_fixture.py  tests.mk  util.py
tools/: inject_rhiza.sh
utils/: explain_bundles.py  link_dogfood.py
(+310 files in other folders)
