[project]
name = "rhiza"
version = "0.18.4"
description = "Reusable configuration templates for modern Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Schmelzer" }
]
keywords = ["templates", "configuration", "ci", "ruff"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[dependency-groups]
lint = [
    "ruff>=0.4,<1.0",
    "interrogate>=1.7,<2.0",
    "pre-commit>=3.7,<5.0",
]
test = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "hypothesis>=6,<7",
    "pytest-timeout>=2,<3",
    "pytest-xdist>=3,<4",
    "pytest-html>=4,<5",
    "python-dotenv>=1,<2",
    "pyyaml>=6.0.1,<7.0",
    "defusedxml>=0.7,<1",
]
docs = [
    "marimo>=0.18.0,<1.0",   # Reactive notebook runtime for book/ examples (v0.18+ for streaming, <1.0 for API stability)
    "numpy>=2.4.0,<3.0",     # Numerical computing for notebook data analysis (v2.4+ includes 2.0 improvements, <3.0 avoids breaking changes)
    "plotly>=6.5.0,<7.0",    # Interactive visualization in notebooks (v6.5+ mature features, <7.0 for API stability)
    "pandas>=3,<3.1",        # Data manipulation for notebook examples (v3+ for modern APIs, <3.1 conservative after major release)
    "mkdocs-material>=9,<10",
]

[project.urls]
Homepage = "https://github.com/jebel-quant/rhiza"
Repository = "https://github.com/jebel-quant/rhiza"
Issues = "https://github.com/jebel-quant/rhiza/issues"

[tool.deptry.package_module_name_map]
pyyaml = "yaml"

